# DLA_crystals

./: .gitignore  Makefile  README.md  build.sh
src/generator/parallel/: parallel_dla_cuda.cu  parallel_dla_openmp.c
src/generator/serial/: single_core_dla.c  single_core_dla_v2.c
src/visuaizer/: CMakeLists.txt
src/visuaizer/apps/ymodel/: ymodel.cpp
src/visuaizer/cuda/: CMakeLists.txt  parallel_dla_cuda.cu
src/visuaizer/libs/yocto_model/: CMakeLists.txt  yocto_model.cpp
src/visuaizer/outs/04_grass/: grass.json
src/visuaizer/outs/04_grass/shapes/: shape11.ply  terrain.ply
src/visuaizer/scripts/: run.sh
src/visuaizer/tests/04_grass/: grass.json
tests/: .fuse_hidden000004ca00000003  parallel_cuda_test.cu  parallel_omp_test.c  random_test.c  voxel_tests.c
utils/: dinamic_list.h  utils.c  utils.h
