# project(cmake_and_cuda LANGUAGES CXX CUDA)
# enable_language(CUDA)

# add_library(parallel_dla_cuda STATIC parallel_dla_cuda.cu)
# set_property(TARGET parallel_dla_cuda PROPERTY CUDA_ARCHITECTURES ON)
# target_compile_features( parallel_dla_cuda PUBLIC cxx_std_11)
# set_target_properties( parallel_dla_cuda
#                        PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
